// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    classes={
      Object {
        "card": "card",
        "cardNoPadding": "cardNoPadding",
        "flat": "flat",
        "raisable": "raisable",
        "raised": "raised",
        "rest": "rest",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "card flat",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "card flat",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Card styles matches the snapshot 1`] = `
Object {
  "card": Object {
    "@media screen and (min-width:768px)": Object {
      "padding": 32,
    },
    "background": "#ffffff",
    "borderRadius": 6,
    "padding": 16,
    "position": "relative",
    "transition": "0.3s box-shadow, 0.3s transform",
  },
  "cardNoPadding": Object {
    "@media screen and (min-width:768px)": Object {
      "padding": 0,
    },
    "extend": "card",
    "padding": 0,
  },
  "flat": Object {
    "boxShadow": "0 1px 2px 0 rgba(0,0,0,0.12), 0 1px 6px 0 rgba(0,29,124,0.05)",
    "zIndex": "auto",
  },
  "raisable": Object {
    "&:hover": Object {
      "boxShadow": "0 12px 9px -5px rgba(0,0,0,0.12), 0 10px 32px 0 rgba(0,29,124,0.12)",
      "transform": "translateY(-4px)",
      "zIndex": 4,
    },
  },
  "raised": Object {
    "boxShadow": "0 12px 9px -5px rgba(0,0,0,0.12), 0 10px 32px 0 rgba(0,29,124,0.12)",
    "zIndex": 4,
  },
  "rest": Object {
    "boxShadow": "0 0 0 0 rgba(0,0,0,0.0), 0 0 0 0 rgba(0,29,124,0)",
    "zIndex": "auto",
  },
}
`;

exports[`CardJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Card) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "card": "Card-card-0-1-1",
        "cardNoPadding": "Card-cardNoPadding-0-1-2",
        "flat": "Card-flat-0-1-3",
        "raisable": "Card-raisable-0-1-6",
        "raised": "Card-raised-0-1-5",
        "rest": "Card-rest-0-1-4",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "card": "Card-card-0-1-1",
          "cardNoPadding": "Card-cardNoPadding-0-1-2",
          "flat": "Card-flat-0-1-3",
          "raisable": "Card-raisable-0-1-6",
          "raised": "Card-raised-0-1-5",
          "rest": "Card-rest-0-1-4",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
